[package]
name = "rust-zod-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
bumpalo = "3.14"

[dev-dependencies]
proptest = "1.4"


[features]
default = ["regex-validation", "transforms"]
regex-validation = []
transforms = []
